--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
     "json-server": "^0.17.3",
     "prompt-sync": "^4.2.0"
   }
