--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
+    "fs": "^0.0.1-security",
     "json-server": "^0.17.3",
     "prompt-sync": "^4.2.0"
   }
