--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fs": "^0.0.1-security",
     "json-server": "^0.17.3",
     "node-fetch": "^3.3.1",
+    "nodemailer": "^6.9.1",
     "prompt-sync": "^4.2.0",
     "readline": "^1.3.0"
   }
