--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
