--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@types/node": "^18.16.3",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "cookie-parser": "^1.4.6",
@@ -11,6 +11,7 @@
     "express-session": "^1.17.3",
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
+    "handlebars": "^4.7.7",
     "json-server": "^0.17.3",
     "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.1",
